--- a/src/components/ComponentCss/Footer.css
+++ b/src/components/ComponentCss/Footer.css
@@ -1,23 +1,40 @@
 .footer {
-    position: absolute;
-    height: 20%;
-    width: 100%;
-    background-color: #D5E071;
-    color: #21243D;
-    text-align: center;
-   bottom: 0;
+   margin-top: var(--footerMargin);
+   padding-top: 2%;
+   padding-bottom: 2%;
+   position: relative;
+   display: flex;
   
+   min-width: var(--footerWidth);
+   max-width: var(--footerWidth);
+   min-height: var(--footerHeight);
+   max-height: var(--footerHeight);
+
+   background-color: #D5E071;
+   color: #21243D;
+   flex-direction: column;
+   justify-content: center;
+   text-align: center;
+
+   
      
  }
 
- .footer .icon-rack {
-    margin-top: 2%;
-    align-self: center;
-    display: inline-flex;
+ .footer .footer-text #copyright-text{
+  color: #000000;
+
+  
  }
 
- .footer .icon-rack .icon{
-    padding-left: 10%;
-    display: inline-flex;
+ .footer .icon-rack { 
+   margin-top: 1.5%;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   column-gap: 2%;
+   
+
  }
+
+ 
  
