--- a/src/components/ComponentCss/ProjExpansion.css
+++ b/src/components/ComponentCss/ProjExpansion.css
@@ -1,51 +1,73 @@
 .project-expansion {
-    flex: 100%;
+    min-width: 100%;
+    min-height: var(--expansionHeight);
+    max-height: var(--expansionHeight);
+
     
 }
 
 .project-content{
-
     display: flex;
-    flex-wrap: wrap;
+    position: relative;
+    
+    align-items: stretch;
     justify-content: center;
-    padding-bottom: 2%;
+    
 
-   
 }
 
-.project-expansion .image-preview {
-   
-   width: 50%; 
-   
+
+.image-preview-container{
+    min-width: 50%;
+    max-width: 50%;
+    max-height: 100%;
+    min-height: 100%;
 }
-.project-expansion .image-preview img{
-    display: flex;
+
+.image-preview {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 15%;
-    border-radius: 25px;
-    width: 70%;
-    height: 70%;
-    object-fit: fill;
 
+    min-width: 50%;
+    max-width: 50%;
+    max-height: 100%;
+    min-height: 100%;
+  
+}
+
+.image-preview img{
+    min-height: 100%;
+    min-width: 100%;
+    object-fit: contain;
 }
 
 .project-description{
+    min-width: 50%;
+    max-width: 50%;
+    min-height: 40%;
+    max-height:  40%;
+    
+}
+
+
+.image-preview img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    max-width: 100%;
+    max-height: 100%;
+
    
-    display: flex;
-    width: 50%;
-
 }
 
-.project-description .description-block {
-    margin-top: auto;
-    margin-bottom: auto;
-}
+
+
 .project-description p{
     
-    width: 80%;
-    height: 80%;
-    line-height: 200%;
+   text-align: left;
+   white-space: pre-line;
+  
 }
 
 #visit-project-button{
@@ -66,34 +88,73 @@
    border: 0;
 }
 
+@media only screen and  (min-width:200px)  and (max-width:500px) {
+    #project-name{
+        font-size: 28px;
+    }
 
-@media only screen and (max-width:900px) {
-    .project-expansion .image-preview {
+    .project-content p {
+        font-size: 16px;
+   }
 
+   .project-description p{
     
-       width: 100%;
+    text-align: center;
+   
+    }
+
+    .project-content{
+        flex-direction: column;
+        justify-content: center;
+        max-width: 100%;
+        min-width: 100%;
+        max-height: 70%;
+        min-height: 70%;
+    }
+
+   
+    .image-preview-container{
+        margin-left: 10%;
+        display:block;
+        min-height: 80%;
+        min-width: 80%;
+    }
+    
+    .image-preview{
+        display:flex;
         
-     }
-     .project-expansion .image-preview img{
-        display: flex;
-        margin-left: auto;
-        margin-right: auto;
+        min-height: 80%;
+        min-width: 80%;
+    }
+
+    .image-preview img{
+        display: block;
+        width: 100%;
+    
+        object-fit: fill;
+    }
+   
+
+    .project-description{
        
-        width: 60%;
-        
-    
-    }
-
-
-     .project-description{
-         width: 100%;
-    
-    }
-
-    .project-description p{
-        margin-left: auto;
+        margin-left: 10%;
         margin-right: auto;
-        line-height: 150%;
+        margin-top: 10%;
+        max-width: 80%;
+        min-width: 80%;
+        max-height: 80%;
+        min-height: 80%;
+        margin-bottom: 20%;
     }
-    
+
+    #project-container{
+        display: grid;
+        grid-auto-rows: 1fr;
+  
+     }
+
+     #visit-project-button {
+      position: bottom;
+     }
+  
 }
